fix : alignment issues in betrayers page

--- a/src/components/common/BetrayerCard/BetrayerCard.module.css
+++ b/src/components/common/BetrayerCard/BetrayerCard.module.css
@@ -58,7 +58,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    min-height: 200px;
   }
   
   .playerName {
@@ -82,7 +82,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
-    margin-top: auto;
   }
   
   .statRow {
@@ -115,4 +114,6 @@
     color: #666;
     margin-top: 1rem;
     text-align: center;
+    margin-top: auto;
+    min-height: 1.5em;
   }
